--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
