--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "lazysizes": "^5.3.2",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
